fixed being able to scroll to offscreen content

--- a/lan2015/static/lan2015/main/index.css
+++ b/lan2015/static/lan2015/main/index.css
@@ -24,6 +24,7 @@
 }
 
 body{
+  position: relative;
   overflow: hidden;
   background: url("background2.jpg");
   background-repeat: no-repeat;
